fix(notification): no duplicates on switching on; feat(notification): check for organization by id
