# chat/docs/swagger.yaml
@@ -72,6 +72,11 @@ definitions:
       id:
         type: string
     type: object
+  model.NotificationExistsResp:
+    properties:
+      exists:
+        type: boolean
+    type: object
   model.NotificationUpdateReq:
     properties:
       active:
@@ -80,7 +85,6 @@ definitions:
         minimum: 1
         type: integer
     required:
-    - active
     - organization_id
     type: object
   model.QueryDto:
@@ -339,6 +343,33 @@ paths:
       summary: Возвращает список избранных предиктов.
       tags:
       - favorite
+  /notification/check/{organization_id}:
+    get:
+      consumes:
+      - application/json
+      description: Проверяет наличие уведомлений.
+      parameters:
+      - description: ID организации
+        in: path
+        name: organization_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Статус уведомления
+          schema:
+            $ref: '#/definitions/model.NotificationExistsResp'
+        "400":
+          description: Некорректный запрос
+          schema:
+            type: string
+      security:
+      - ApiKeyAuth: []
+      summary: Проверяет наличие уведомлений.
+      tags:
+      - notification
   /notification/switch:
     post:
       consumes:
