# chat/internal/notification/router.go
@@ -6,6 +6,7 @@ import (
 
 type notificationHandler interface {
 	Switch(c *fiber.Ctx) error
+	Check(c *fiber.Ctx) error
 }
 
 // SetupNotificationRoutes маппинг запросов к уведомлениям.
@@ -13,4 +14,5 @@ func SetupNotificationRoutes(app fiber.Router, h notificationHandler) {
 	g := app.Group("/notification")
 
 	g.Post("/switch", h.Switch)
+	g.Get("/check/:organization_id", h.Check)
 }
